--- a/src/scss/theme/_netmatters.scss
+++ b/src/scss/theme/_netmatters.scss
@@ -74,6 +74,13 @@ $service-icons: (
     "cyber-security": "shield",
     "developer-training": "student-cap",
 );
+$services-in-hero-carousel:
+    "web-design",
+    "it-support",
+    "telecoms-services",
+    "bespoke-software",
+    "digital-marketing",
+    "cyber-security";
 
 // each social media platform has a brand colour and icon
 $social-media-colours: (
