--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,5 @@
 @use "../../node_modules/normalize.css/normalize";
 @use "../../node_modules/@glidejs/glide/dist/css/glide.core.min.css";
 @use "base";
+@use "menu-motion";
 @use "layout";
