--- a/src/scss/_menu-motion.scss
+++ b/src/scss/_menu-motion.scss
@@ -1,4 +1,3 @@
-
 .page-scrim-holder {
     position: relative;
     right: 0;
@@ -36,7 +35,7 @@
     
             opacity: 1.0;
     
-            // transition ot this state instantly changes width & height, and fades opacity
+            // transition to this state instantly changes width & height, and fades opacity
             transition: opacity 500ms;
         }
     }
