add cookie permission modal

--- a/src/scss/layout/_carousel.scss
+++ b/src/scss/layout/_carousel.scss
@@ -10,7 +10,7 @@ $selected-ring-offset: 6px;
     box-sizing: border-box;
     flex-grow: 1;
 
-    .hiddenIfNoScript,
+    .hidden-if-no-script,
     .glide__track,
     .glide__slides {
         height: 100%;
