--- a/src/scss/utility/_button.scss
+++ b/src/scss/utility/_button.scss
@@ -20,6 +20,8 @@
         height: $height;
     }
 
+    cursor: pointer;
+
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
