replace use of id to select styles

--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -2,7 +2,7 @@
 @use "../theme";
 @use "../utility";
 
-#about {
+.about {
     background-color: theme.$primary;
     color: theme.$primary-contrast;
 
