--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -6,7 +6,7 @@
 // for both width and height.
 $icon-background-size: utility.px-to-rem(60px);
 
-#services {
+.services {
     @include utility.hide-section-heading;
 
     box-sizing: border-box;
