--- a/src/scss/layout/_cookies.scss
+++ b/src/scss/layout/_cookies.scss
@@ -36,16 +36,18 @@ $modal-button-font-size: utility.px-to-rem(17px);
 
         box-sizing: border-box;
         padding: utility.px-to-rem(30px);
+
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
-        justify-content: center;
     }
 
     .content {
         background-color: $cookie-modal-background;
-        flex-shrink: 0;
         margin: auto;
+
+        // necessary to work around an IE11 bug with flex
+        max-width: 100%;
 
         @include theme.above-breakpoint('small') {
             width: utility.px-to-rem(600px);
