rename classes in footer

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -104,7 +104,7 @@ footer {
         }
     }
 
-    .social-media {
+    .footer-social-media {
         // this section loses the usual padding so the social media buttons
         // can be aligned with that padding line from their own padding.
         padding: 0;
