--- a/src/scss/_menu-motion.scss
+++ b/src/scss/_menu-motion.scss
@@ -60,6 +60,7 @@ $duration-menu-open: 500ms;
 
 .page-content {
     height: 100vh;
+    position:relative;
     overflow-x: hidden;
     overflow-y: auto;
     background: theme.$page-background;
