create cloned header

--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -2,6 +2,7 @@
 @use "accreditations";
 @use "carousel";
 @use "clients";
+@use "cloned-header";
 @use "cookies";
 @use "first-container";
 @use "footer";
@@ -11,4 +12,3 @@
 @use "menu-content";
 @use "nav-bar";
 @use "services";
-@use "sticky-header";
