--- a/src/scss/layout/_cloned-header.scss
+++ b/src/scss/layout/_cloned-header.scss
@@ -17,7 +17,7 @@ $scrollbar-width: utility.px-to-rem(17px);
     // leave space for the scroll bar
     right: $scrollbar-width;
 
-    // box-shadow: 0 0 #000 5px 20px;
+    box-shadow: 0 5px 35px rgba(#000, 0.1);
 
     transition: top 400ms,
         left menu-motion.$duration-menu-open,
