add placeholder contact page

--- a/src/partials/menuContent.html
+++ b/src/partials/menuContent.html
@@ -1,7 +1,7 @@
 <div class="menu-content">
 <ul class="menu-services">
     <li>
-        <a class="contact-us" href="https://www.netmatters.co.uk/contact-us">Contact Us</a>
+        <a class="contact-us" href="contact.php">Contact Us</a>
     </li>
     <li class="web-design">
         <a class="category-head" href="https://www.netmatters.co.uk/web-design"><h2><span class="first">Web</span> Design</h2></a>
