--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
 <header>
     <h1>Netmatters</h1>
     <div class="content">
-        <a class="logo" href="#"><img src="img/netmatters-brand/logo-full-alpha.png" alt="Netmatters"></a>
+        <a class="logo" href="index.php"><img src="img/netmatters-brand/logo-full-alpha.png" alt="Netmatters"></a>
         <a class="phone" aria-label="Call our office" href="tel:01603704020"></a>
         <button type="button" class="hamburger-menu">
             <span class="hamburger-icon-whole">
@@ -13,7 +13,7 @@
             <span class="title">Menu</span>
         </button>
         <a class="support" href="https://support.netmatters.com/">Support</a>
-        <a class="contact" href="https://www.netmatters.co.uk/contact-us">Contact</a>
+        <a class="contact" href="contact.php">Contact</a>
         <form>
             <input id="search" name="query" type="search" placeholder="Search..." aria-label="Search query">
             <button type="submit" id="search-submit" aria-label="Perform search"></button>
