add custom form styling

--- a/src/scss/theme/_netmatters.scss
+++ b/src/scss/theme/_netmatters.scss
@@ -21,6 +21,9 @@ $secondary-lighter: #666;
 $nav-bar-bottom-border: #999aa2;
 $menu-button-hover: #22242e;
 
+$error-colour: #e68888;
+$error-colour-accent: #c01f42;
+
 $primary-button-colour: #4183d7;
 $primary-button-hover-colour: #2a6ec6;
 
